# private-transaction-families

./: LICENSE  README.md  SETUP.md  SPECIFICATION.md  USAGE.md  get_source.sh
.github/: settings.yml
Debug/: basic_test.sh  clear_sawtooth.sh  launch.json  restart_sawtooth.sh  txn_gen_acl.json  txn_gen_example.json  txn_gen_svn.json
Debug/admin_keys/: client_private_key.hexstr  client_public_key.hexstr
Debug/client1_keys/: client_private_key.hexstr  client_public_key.hexstr
Debug/client_reader/: read_request.py  read_request_new.py  read_request_txn.py
Test/: CMakeLists.txt  readme.txt  run_ult.sh
Test/AccessControlLogicTest/: CMakeLists.txt  mock_crypto.h  mock_ledger_keys.h  mock_memset_s.h  mock_tl.h  test_acl_internal.cpp
Test/BusinessLogicTest/: CMakeLists.txt  Test.cpp  mock_acl.cpp  mock_crypto.cpp
Test/CryptoLibTest/: CMakeLists.txt  Test.cpp  test_crypto_aes_siv.cpp  test_crypto_dh.cpp  test_crypto_files.cpp  test_crypto_hash.cpp  test_crypto_kdf.cpp  test_crypto_main.cpp  test_ledger_reader_writer.cpp
Test/ListenerTest/: CMakeLists.txt  Test_listener.cpp  mock_sawtooth.h
private_rest_api/rest_api/: compile_proto.sh  setup.py
private_rest_api/rest_api/sawtooth_rest_api/: config.py  rest_api.py  route_handlers.py  start-rest-api.py
private_rest_api/rest_api/sawtooth_rest_api/protobuf/: authorization_pb2.py  batch_pb2.py  block_pb2.py  client_batch_pb2.py  client_batch_submit_pb2.py  client_block_pb2.py  client_event_pb2.py  client_list_control_pb2.py  client_peers_pb2.py  client_receipt_pb2.py  client_state_pb2.py  client_status_pb2.py  client_transaction_pb2.py  consensus_pb2.py  events_pb2.py  genesis_pb2.py  identity_pb2.py  merkle_pb2.py  network_pb2.py  processor_pb2.py  setting_pb2.py  state_context_pb2.py  transaction_pb2.py  transaction_receipt_pb2.py  validator_pb2.py
private_rest_api/sawtooth_sdk/: __init__.py
private_rest_api/sawtooth_sdk/processor/: __init__.py
src/AccessControlLogic/: Makefile  access_control.cpp  access_control.h  acl_internal.cpp  acl_internal.h  acl_lib.mk  acl_read_write.cpp  acl_read_write.h  acl_serialization.cpp  data_records_crypto.cpp  data_records_crypto.h
src/BusinessLogic/: Makefile  bl_access_txns.cpp  bl_access_txns.h  bl_internal.h  bl_lib.mk  businessLogic.cpp  businessLogic.h  json.hpp
src/ClientReader/Client/: Makefile
src/ClientReader/Client/app/: Makefile  app.cpp
src/ClientReader/Server/: Makefile
src/ClientReader/Server/app/: Makefile  app.cpp  client_reader.cpp
src/ClientReader/Server/enclave/: Enclave.config.xml  Enclave.edl  Enclave.lds  Enclave_private.pem  Makefile  acl_stub.cpp  tclient_reader.cpp  tclient_reader.h  tenclave_read.cpp
src/Common/: Makefile  PrivateLedger.cpp  PrivateLedger.h  TasePoc.h  app_log.cpp  app_log.h  cJSON.cpp  cJSON.h  common_ocalls.cpp  common_t.mk  common_u.mk  config.cpp  config.h  ecall_wrapper.h  enclave_log.cpp  enclave_log.h  enclave_role.cpp  enclave_role.h  ledger_keys.cpp  ledger_keys.h  log_defines.h  memset_s.c  memset_s.h  safe_copy.cpp  safe_copy.h  secure_allocator.h  tmemory_debug.h  tmemory_leaks.cpp  tseal_migration_attr.h
src/CryptoLib/: Makefile  app_lib.mk  app_shared_lib.mk  build_all_crypto.sh  crypto.cpp  crypto.h  crypto_aes.cpp  crypto_aes_siv.cpp  crypto_ecdsa.cpp  crypto_enclave.h  crypto_file_names.h  crypto_files.cpp  crypto_hash.cpp  crypto_kdf.cpp  crypto_kdf_enclave.cpp  crypto_kdf_strings.h  crypto_ledger_reader_writer.cpp  crypto_ledger_reader_writer.h  crypto_rand_engine.cpp  crypto_stl_reader_writer_python_wrapper.cpp  crypto_stl_reader_writer_python_wrapper.h  crypto_stl_reader_writer_wrapper.cpp  crypto_stl_reader_writer_wrapper.h  crypto_transaction.h  enclave_lib.mk
src/CryptoLib/openssl/: build.sh
src/CryptoLib/openssl/include/openssl/: opensslconf.h
src/CryptoLib/openssl/lib/: libcrypto_so.so.1.1
src/CryptoLib/sgxssl/: build.sh  build_aes_siv.sh
src/CryptoLib/sgxssl/include/: sgx_tsgxssl.edl
src/CryptoLib/sgxssl/include/openssl/: opensslconf.h
src/CryptoLib/sgxssl/libaes_siv/: aes_siv.c
src/CryptoLib/sgxssl/revised_files/: build_openssl.sh  bypass_to_sgxssl.h  tdirent.cpp  tunistd.cpp  uunistd.cpp
src/Listener/: Makefile
src/Listener/App/: Makefile  data_map.cpp  data_map.h  listener_ocalls.cpp  rest_handler.cpp  rest_handler.h
src/Listener/Enclave/: Makefile  secure_apply.cpp
src/Main/: Makefile
src/Main/App/: App.cpp  app.h  app.mk  generate_edge_files_u.mk  txn_handler.cpp  txn_handler.h
src/Main/Enclave/: Enclave.config.xml  Enclave.edl  Enclave.mk  client_reader.edl  generate_edge_files_t.mk  server_sync.edl  tp.edl
src/Network/: client_network.cpp  client_network.h  network.cpp  network.h  server_network.cpp  server_network.h
src/ServerSync/: Makefile
src/ServerSync/app/: Makefile  client.cpp  genesis.cpp  messages.h  server.cpp  server_messages.cpp  stubs.cpp
src/ServerSync/common/: common.h  parse_string.cpp  parse_string.h
src/ServerSync/enclave/: Makefile  ias.h  ias_certificates.cpp  ias_session.h  ias_tls_connection.cpp  server_session.cpp  server_session.h  stubs.cpp  tclient.cpp  tgenesis.cpp  tserver.cpp
src/ServerSync/genesis_files/: fake.key  kds.hexstr
src/ServerSync/network/: client_network.cpp  client_network.h  network.cpp  network.h  server_network.cpp  server_network.h
src/ServerSync/tools/: Makefile  client_keys_creator.cpp  kds_calculator.cpp  kds_signer.cpp
transaction_generator/: setup.py
transaction_generator/client_cli/: cli.py  client.py  create_batch.py  exceptions.py  intkey_workload.py  load.py  populate.py
transaction_generator/client_cli/workload/: workload_generator.py
transaction_generator/config/: config_loader.py  config_schema.json
